wrap footer correctly

--- a/static/css/partials/navigation/_footer.scss
+++ b/static/css/partials/navigation/_footer.scss
@@ -10,6 +10,7 @@ footer {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		flex-wrap: wrap;
 	}
 	h2 {
 		&:after {
